Add material icons

--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -18,6 +18,8 @@
 }
 
 .topbar a {
+    display: flex;
+    align-items: center;
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
@@ -28,4 +30,8 @@
     text-decoration: none;
     color: #FFFFFF;
 
+}
+
+.topbar a i {
+  margin-left: 5px;
 }
