--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 body {
     background: #f2f2f2;
     font-family: Roboto, Helvetica, Arial, sans-serif;
